[package]
edition = "2021"
name = "ngrok"
version = "0.2.3"
description = "The ngrok Agent SDK for Python"

[lib]
name = "ngrok"
crate-type = ["cdylib"]

[dependencies]
async-trait = "0.1.59"
bytes = "1.3.0"
futures = "0.3.26"
lazy_static = "1.4.0"
log = "0.4"
ngrok = { version = "0.11.0" }
pyo3 = { version = "0.18.1", features = ["abi3", "abi3-py37", "extension-module", "multiple-pymethods"]}
pyo3-asyncio = { version = "0.18.0", features = ["attributes", "tokio-runtime"] }
pyo3-log = { version = "0.8.1" }
parking_lot = "0.12.1"
tokio = { version = "1.23.0", features = ["sync"] }
tracing = { version = "0.1.37", features = ["log", "log-always"] }

[build-dependencies]
prost-build = "0.11.3"
pyo3-build-config = "0.17.3"

[profile.release]
lto = true
