[package]
edition = "2021"
name = "ngrok-python"
version = "1.5.0"
description = "The ngrok Agent SDK for Python"

[lib]
name = "ngrok"
crate-type = ["cdylib"]

[dependencies]
async-trait = "0.1.59"
bytes = "1.3.0"
futures = "0.3.26"
lazy_static = "1.4.0"
log = "0.4"
mio = { version = "1.0.3" }
ngrok = { version = "0.15.0", features = ["hyper"] }
once_cell = {version = "1.21"}
pyo3 = { version = "0.22", features = ["abi3", "abi3-py310", "extension-module", "multiple-pymethods", "experimental-async", "gil-refs", "generate-import-lib"]}
pyo3-async-runtimes = { version = "0.22", features = ["attributes", "tokio-runtime"] }
pyo3-log = { version = "0.11" }
parking_lot = "0.12.1"
regex = "1.9.5"
rustls = "0.23.25"
rustls-pemfile = "2.0.0"
tokio = { version = "1.40", features = ["sync"] }
tracing = { version = "0.1.37", features = ["log", "log-always"] }
url = "2.4.0"
aws-lc-sys = { version = "=0.28.0", features = ["bindgen"] }
aws-lc-rs = "=1.13.0"

[build-dependencies]
prost-build = "0.13.5"
pyo3-build-config = "0.24"

[profile.release]
lto = true

[package.metadata.cargo-udeps.ignore]
normal = ["mio"]
