[tool.poetry]
name = "ngrok-extra"
version = "0.1.0"
description = ""
authors = ["ngrok <ngrok@ngrok.com>"]
license = "apache or something idk"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ngrok = "^1.0.0"
flask = "^3.0"
django = "^5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
